--- a/AutomationFramework/AutomationFramework/packages.config
+++ b/AutomationFramework/AutomationFramework/packages.config
@@ -7,6 +7,7 @@
   <package id="NUnit" version="3.13.1" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.17.0" targetFramework="net461" />
   <package id="SpecFlow" version="3.6.23" targetFramework="net461" />
+  <package id="SpecFlow.NUnit" version="3.6.23" targetFramework="net461" />
   <package id="SpecFlow.Tools.MsBuild.Generation" version="3.6.23" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
