--- a/AutomationFramework/Base/packages.config
+++ b/AutomationFramework/Base/packages.config
@@ -9,6 +9,7 @@
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="88.0.4324.9600" targetFramework="net461" />
   <package id="SpecFlow" version="3.6.23" targetFramework="net461" />
+  <package id="SpecFlow.NUnit" version="3.6.23" targetFramework="net461" />
   <package id="SpecFlow.Tools.MsBuild.Generation" version="3.6.23" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
