--- a/AutomationFramework/Base/AutomationFramework.csproj
+++ b/AutomationFramework/Base/AutomationFramework.csproj
@@ -90,16 +90,29 @@
     <Compile Include="BDD\Hooks\ScenarioHooks.cs" />
     <Compile Include="BDD\Hooks\StepHooks.cs" />
     <Compile Include="BDD\StepDefinition\BaseSteps.cs" />
+    <Compile Include="BDD\StepDefinition\BrokerScreen1Steps.cs" />
     <Compile Include="BDD\StepDefinition\HomePageSteps.cs" />
     <Compile Include="BDD\StepDefinition\LogInSteps.cs" />
+    <Compile Include="BDD\TableModels\BrokerScreen1\InsuredDetailsModel.cs" />
+    <Compile Include="BDD\TableModels\BrokerScreen1\PolicyDetailsModel.cs" />
+    <Compile Include="PageObjects\Common\BasePage.cs" />
+    <Compile Include="PageObjects\BrokerScreen2.cs" />
+    <Compile Include="PageObjects\BrokerScreen3.cs" />
+    <Compile Include="PageObjects\BrokerScreen4.cs" />
+    <Compile Include="PageObjects\DetailsScreen.cs" />
+    <Compile Include="PageObjects\EndorsementScreen.cs" />
+    <Compile Include="PageObjects\ExtensionScreen.cs" />
+    <Compile Include="PageObjects\PremiumSummaryScreen.cs" />
+    <Compile Include="PageObjects\PriorClaimsScreen.cs" />
+    <Compile Include="PageObjects\PropertySummaryScreen.cs" />
     <Compile Include="Utils\DataReader.cs" />
     <Compile Include="Data\Models\LogInDataModel.cs" />
     <Compile Include="PageObjects\BrokerScreen1.cs" />
-    <Compile Include="PageObjects\CommonScreens\Footer.cs" />
-    <Compile Include="PageObjects\CommonScreens\Header.cs" />
-    <Compile Include="PageObjects\CommonScreens\HomePage.cs" />
-    <Compile Include="PageObjects\CommonScreens\LeftMenu.cs" />
-    <Compile Include="PageObjects\CommonScreens\LogInPage.cs" />
+    <Compile Include="PageObjects\Common\Footer.cs" />
+    <Compile Include="PageObjects\Common\Header.cs" />
+    <Compile Include="PageObjects\Common\HomePage.cs" />
+    <Compile Include="PageObjects\Common\LeftMenu.cs" />
+    <Compile Include="PageObjects\Common\LogInPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Enums.cs" />
     <Compile Include="Utils\Environments.Designer.cs">
@@ -112,7 +125,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="BDD\Features\Test1.feature" />
     <None Include="BDD\Features\Test.feature" />
     <None Include="packages.config" />
   </ItemGroup>
